istio_issue/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-test 
  labels:
    istio-injection: enabled
