istio_issue/app1.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: "istio-test"
  name: vs1
spec:
  exportTo:
    - "."
  hosts:
  - "*"
  gateways:
  - istio-test-gateway
  http:
    - name: default
      route:
        - destination:
            host: service-deployment1
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-deployment1
  namespace: istio-test
spec:
  selector:
    app: deployment1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment1
  namespace: istio-test
  labels:
    app: deployment1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment1
      version: v1
  template:
    metadata:
      labels:
        app: deployment1
        version: v1
    spec:
      containers:
        - name: nginx
          image: nginx:1.23.2
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              name: nginx-conf1
      volumes:
        - name: nginx-conf1
          configMap:
            name: nginx-conf1
            items:
              - key: nginx.conf
                path: nginx.conf
